crates/keron-lang/tests/corpus/errors/check/fn_body_local_shadows_param.keron
fn f(x: Int): Int {
  val x = 2
  x
}
